syntax = "proto3";

option csharp_namespace = "GrpcServer.Protos";
import "Protos/shared.proto";


service FileUpload {
  rpc FileUpload(stream UploadRequest) returns (ServiceStatus) {}
}


message UploadRequest{
    oneof UploadMessage{
        FileMetaData FileMeta = 1;
        bytes FileChunk = 2;
    }
}


message FileMetaData{
    oneof FileMeta{
        PhotoMeta PhotoMeta = 1;
        FormTemplateMeta FormTemplateMeta = 2;
     }
}


message PhotoMeta{
    int32 ProcedureID = 1;
    string PhotoName = 2;
    string PhotoExtension = 3;
    bool isBefore = 4;
}

message FormTemplateMeta{
    string FormName = 1;
    string FormExtension = 2;
}


